# fastapi-react-project

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  conftest.py  lambda.Dockerfile  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/app/: fastapi_app.py  initial_data.py  lambda_handler.py  main.py  migrate_handler.py  mypy.ini
backend/app/alembic/: env.py
backend/app/alembic/versions/: 026d5ff0c8ed_create_projects_table.py  1b2693b1192a_create_tasks_table.py  8b6463912f80_add_created_at_and_updated_at_columns_.py  91979b40eb38_create_users_table.py  b10dcb2d671d_add_project_id_to_tasks.py
backend/app/api/api_v1/routers/: tasks.py  users.py
backend/app/api/api_v1/routers/tests/: test_users.py
backend/app/core/: auth.py  celery_app.py  config.py  security.py
backend/app/db/: schemas.py  session.py  task_crud.py  task_model.py  task_schemas.py  user_crud.py  user_model.py  user_schemas.py
backend/app/domains/auth/: auth.py
backend/app/domains/auth/api/api_v1/routers/: auth.py
backend/app/domains/tasks/api/api_v1/routers/: projects.py  tasks.py
backend/app/domains/tasks/api/api_v1/routers/tests/: test_projects.py  test_tasks.py
backend/app/domains/tasks/db/: task_entity.py  task_repository.py
backend/app/domains/tasks/db/projects/: project_dtos.py  project_entity.py  project_repository.py
backend/app/domains/tasks/db/tasks/: task_dtos.py  task_entity.py  task_repository.py
backend/app/domains/users/api/api_v1/routers/: users.py
backend/app/domains/users/api/api_v1/routers/tests/: test_users.py
backend/app/domains/users/db/: user_dtos.py  user_entity.py  user_repository.py
backend/app/tests/: test_celery_tasks.py  test_tasks_api.py
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json
scripts/: build.sh
(+51 files in other folders)
